# sevenz-rust2

./: Cargo.toml  rustfmt.toml
examples/: advance.rs  block_decompress.rs  compress.rs  decompress.rs  decompress_progress.rs  mt_decompress.rs
src/: decoder.rs  encoder.rs  encoder_options.rs  reader.rs  writer.rs
src/codec/: brotli.rs  lz4.rs
src/encryption/: aes.rs
src/util/: compress.rs  decompress.rs  wasm.rs
src/writer/: counting_writer.rs  lazy_file_reader.rs
tests/: compress_tests.rs  decompress_encrypted_tests.rs  decompression_tests.rs  solid_compress_tests.rs
