[package]
description = "A 7z decompressor/compressor written in pure Rust"
edition = "2024"
homepage = "https://github.com/hasenbanck/sevenz-rust2"
keywords = ["7z", "7zip", "sevenz", "decompress"]
license = "Apache-2.0"
name = "sevenz-rust2"
readme = "README.md"
repository = "https://github.com/hasenbanck/sevenz-rust"
rust-version = "1.85"
version = "0.19.3"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["aes256", "bzip2", "compress", "ppmd", "util"]
default_wasm = ["aes256_wasm", "bzip2", "compress", "ppmd", "util"]
nt-time = ["dep:nt-time"]
aes256 = ["dep:aes", "dep:cbc", "dep:getrandom", "dep:sha2"]
aes256_wasm = ["aes256", "getrandom/wasm_js"]
brotli = ["async-compression/brotli"]
bzip2 = ["async-compression/bzip2"]
compress = ["lzma-rust2/encoder"]
deflate = ["async-compression/deflate", "async-compression/deflate64"]
lz4 = ["async-compression/lz4"]
ppmd = ["dep:ppmd-rust"]
util = []
zstd = ["async-compression/zstd"]

[dependencies]
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
crc32fast = "1"
getrandom = { version = "0.3", optional = true }
lzma-rust2 = { version = "0.15", default-features = false, features = [
    "std",
    "optimization",
] }
ppmd-rust = { version = "1", optional = true }
nt-time = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
async-fs = "2"
futures-lite = "2"
async-io = "2"
async-compression = { version = "0.4", features = ["futures-io"] }
futures = "0.3"
blocking = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
rand = { version = "0.9" }
smol = "2"
tempfile = "3"

[[example]]
name = "advance"
required-features = ["default"]

[[example]]
name = "block_decompress"
required-features = ["default"]

[[example]]
name = "compress"
required-features = ["default"]

[[example]]
name = "decompress"
required-features = ["default"]

[[example]]
name = "decompress_progress"
required-features = ["default"]

[[example]]
name = "mt_decompress"
required-features = ["default"]

[package.metadata.docs.rs]
all-features = true
